fix search button on mobile

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -78,7 +78,7 @@ input#search{
 }
 
 input#search_btn {
-	width: 60px;
+	width: 30px;
 	height: 30px;
 }
 
